# Lexicon

./: .env.example  .gitignore  README.md  pyproject.toml
desktop-app/: index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
desktop-app/scripts/: build.mjs  clean.mjs  dev.mjs
desktop-app/src/main/: main.ts
desktop-app/src/preload/: preload.cts
desktop-app/src/renderer/: App.tsx  styles.css  vite-env.d.ts
docs/: architecture.md
obsidian-plugin/: esbuild.config.mjs  main.ts  manifest.json  package.json
src/lexicon/: __init__.py  chat.py  cli.py  config.py  decay.py  ingestion.py  models.py  processor.py  review.py  search.py  vault.py  workspace.py
src/lexicon/ai/: __init__.py  base.py  providers.py
src/lexicon/extractors/: __init__.py  markitdown.py  mineru.py  pdf.py  playwright_url.py  router.py  text.py  url.py
tests/: conftest.py  test_cli_json.py  test_decay.py  test_extractors.py  test_processor.py  test_review.py  test_search.py  test_vault_flow.py
