[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lexicon"
version = "0.1.0"
description = "Local-first AI-maintained knowledge vaults."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.32"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lexicon = "lexicon.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
